# BoilerPlate

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/ConfigManager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  logconfig.ini
